--- a/generators/node-express-boilerplate/generators/model.hbs
+++ b/generators/node-express-boilerplate/generators/model.hbs
@@ -4,7 +4,7 @@ const {{camelCase name}}Schema = new mongoose.Schema(
   {
     // Define your schema fields here
   },
-  { timestamps: true },
+  { timestamps: true }
 );
 
 const {{pascalCase name}} = mongoose.model('{{pascalCase name}}', {{camelCase name}}Schema);
