--- a/generators/express-postgres-prisma/generators/controller.hbs
+++ b/generators/express-postgres-prisma/generators/controller.hbs
@@ -1,6 +1,6 @@
 import httpStatus from 'http-status';
 import type { Request, RequestHandler, Response } from 'express';
-import {{camelCase name}}Service from '@/services/{{kebabCase name}}.service';
+import {{camelCase name}}Service from '@/services/{{fileName}}.service';
 
 const get{{pascalCase name}}: RequestHandler = async (req: Request, res: Response) => {
   const result = await {{camelCase name}}Service.get{{pascalCase name}}();
