--- a/generators/nodets-express-boilerplate/generators/route.hbs
+++ b/generators/nodets-express-boilerplate/generators/route.hbs
@@ -1,7 +1,7 @@
-import {{camelCase name}}Controller from '@/controllers/{{kebabCase name}}.controller';
+import {{camelCase name}}Controller from '@/controllers/{{fileName}}.controller';
 import auth from '@/middlewares/auth';
 import validate from '@/middlewares/validate';
-import {{camelCase name}}Validation from '@/validations/{{kebabCase name}}.validation';
+import {{camelCase name}}Validation from '@/validations/{{fileName}}.validation';
 import express from 'express';
 
 const router = express.Router();
